--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,11 @@
 version: 2
 updates:
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: 'npm'
+    directory: '/'
     schedule:
-      interval: "daily"
+      interval: 'daily'
     open-pull-requests-limit: 5
     allow:
-      - dependency-type: "direct"
+      - dependency-type: 'direct'
     commit-message:
-      prefix: "chore(package.json):"
+      prefix: 'chore(package.json):'
