--- a/package.json
+++ b/package.json
@@ -17,12 +17,21 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.9.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "resend": "^4.5.1"
+    "react-hook-form": "^7.57.0",
+    "resend": "^4.5.1",
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.50"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -36,6 +45,7 @@
     "prettier": "^3.5.3",
     "prisma": "^6.9.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.3",
     "typescript": "^5"
   }
 }
