--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "db:studio": "prisma studio",
     "test": "jest --runInBand",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "seed:effects": "ts-node --project tsconfig.json --compiler-options '{\"module\":\"commonjs\",\"moduleResolution\":\"node\"}' prisma/sync-effects.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
@@ -40,7 +41,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22",
+    "@types/node": "^22.15.30",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
@@ -51,7 +52,8 @@
     "prisma": "^6.9.0",
     "tailwindcss": "^4",
     "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
