--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
+    "db:sync": "ts-node --project tsconfig.json --compiler-options '{\"module\":\"commonjs\",\"moduleResolution\":\"node\"}' prisma/sync-effects.ts",
     "test": "jest --runInBand",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "seed:effects": "ts-node --project tsconfig.json --compiler-options '{\"module\":\"commonjs\",\"moduleResolution\":\"node\"}' prisma/sync-effects.ts"
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
